# ifk-analyses

./: .copier-answers.yml  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: github-action-md-lint.yaml  github-action-test.yaml
data/: search_tree.txt
docs/: index.md
notebooks/: example_persontransportstatistik.py  passenger_vehicle_co2_lca copy.py  passenger_vehicle_co2_lca.py  persontransportstatistik.ipynb
src/ifk-scb-compilations/: scb.py
src/ifk_analyses/: main.py
src/ifk_analyses/objects/: emissions_kommun.py  passenger_transport.py  personal_vehicle_lca.py
src/ifk_scb_compilations/: main.py  search_scb.py
src/ifk_scb_compilations/objects/: emissions_kommun.py  passenger_transport.py
src/ifk_scb_compilations/queries/: passenger_transport.py
tests/: test_unit.py
