[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ifk-scb-compilations"
version = "0.1.0"
description = "Unspecified."
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Christoffer Strömberg", email = "info@ingenjorsarbeteforklimatet.se" },
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
lint = [
    "ruff ~= 0.1",
]
type = ["mypy ~= 1.7", "types-requests ~= 2.28", "pandas-stubs ~= 1.5"]
test = ["pytest ~= 7.1", "coverage ~= 6.5", "pytest-cov ~= 4.0"]
doc = [
    "mkdocs ~= 1.4",
    "mkdocs-material ~= 8.5",
    "mkdocstrings[python] ~= 0.19",
]
dev = [
    "ifk-scb-compilations[lint]",
    "ifk-scb-compilations[type]",
    "ifk-scb-compilations[test]",
    "ifk-scb-compilations[doc]",
    "pre-commit ~= 2.20",
    "ipykernel ~= 6.26",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["material"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W", "F", "B", "D", "I", "S"]
ignore = ["D203", "D213", "S101"]
unfixable = ["B", "S"]
pydocstyle.convention = "google"

[tool.mypy]
ignore_missing_imports = true
