[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ifk_analyses"
version = "0.1.0"
description = "Compilation of data from SCB and help functions working with scb api."
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "IFK", email = "info@ingenjorsarbeteforklimatet.se" },
]
requires-python = ">=3.9"
dependencies = ["pyscbwrapper", "requests", "numpy", "pandas ~= 2.2"]

[project.optional-dependencies]
lint = [
    "ruff ~= 0.1",
]
type = ["mypy ~= 1.7", "types-requests ~= 2.28", "pandas-stubs ~= 1.5"]
test = ["pytest ~= 7.1", "coverage ~= 6.5", "pytest-cov ~= 4.0"]
doc = [
    "mkdocs ~= 1.4",
    "mkdocs-material ~= 8.5",
    "mkdocstrings[python] ~= 0.19",
]
dev = [
    "ifk_scb_compilations[lint]",
    "ifk_scb_compilations[type]",
    "ifk_scb_compilations[test]",
    "ifk_scb_compilations[doc]",
    "pre-commit ~= 2.20",
    "ipykernel ~= 6.26",
    "matplotlib ~= 3.8",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["material"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W", "F", "B", "D", "I", "S"]
ignore = ["D203", "D213", "S101"]
unfixable = ["B", "S"]
pydocstyle.convention = "google"

[tool.mypy]
ignore_missing_imports = true
